--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.my_game_java/com.example.my_game_java.HelloApplication</mainClass>
+                            <mainClass>com.example.my_game_java/com.example.my_game_java.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
